--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <canvas class="webGlScene"></canvas>
  
-    <script type="module" src="model/main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
